--- a/index.html
+++ b/index.html
@@ -3,59 +3,34 @@
 <html>
 
 	<head>
-
 		<script src="./jquery-3.4.1.slim.min.js"></script>
 		<script type="text/javascript" src="./app.js"></script>
-
 		<meta charset="utf-8" />
-
 		<!-- Our javaScript  file -->
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="register.js"></script>
-		<script type="text/javascript" src="login.js"></script>
+		<script type="text/javascript" src="code/login.js"></script>
 		<script type="text/javascript" src="about.js"></script>
 		<script type="text/javascript" src="navbar.js"></script>
 		<script type="text/javascript" src="pre-game.js"></script>
 		<script type="text/javascript" src="game.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
-<script src="https://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 		<!-- Our CSS stylesheet file -->
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="registerStyle.css" />
-
 		<!-- Including the Lobster font from Google's Font Directory -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
-
 	</head>
 
 	<body>
-
 		<div  id="header1">
 			<header>
-			Samuel Benichou & Lior Baruchovitch
+				Samuel Benichou & Lior Baruchovitch
 			</header>
 		</div>
-
-
 		<nav>
-            <!--<ul class="fancyNav">
-                <li id="Welcome"><a href="#home" class="homeIcon">Welcome</a></li>
-                <li id="Register"><a href="#news">Register</a></li>
-                <li id="Login"><a href="#about">Login</a></li>
-                <li id="About"><a href="#services">About</a></li>
-                <li id="Contact"><a href="#contact">Contact us</a></li>
-            </ul>-->
             <div class="container">
-        		<!--<div class="nav-heading">
-            		<button class="toggle-nav" data-toggle="open-navbar1"><i class="fa fa-align-right"></i></button>
-            		<a class="brand" href="#">PACMAN</a>
-        		</div>-->
         		<div class="menu" id="open-navbar1">
             		<ul class="list">
                 	<li><a class="activeNav welcomeNav" href="#" data-option="welcome"
@@ -70,92 +45,155 @@
             		</ul>
         		</div>
     		</div>
-
         </nav>
-
-        <!--<div class="screen" id='welcomeScreen' align="center">
-			<input type=button class="button" id="loginButton" value="Login">
-			<input type=button class="button" id="signupButton" value="Register">
-		</div>-->
 
         <!--<footer> The game was created by Samuel. <a href="mailto:benichos@post.bgu.ac.il?subject=RetroPacman">Contact Us.</a></footer>-->
 
         <div id="main" class="container-fluid">
-    		<section id="welcomeSection" class="activeSection" align="center">
-       			<div id="welcomeButtons">
-            		<button onclick="moveTo('login')" class="button" style="vertical-align:middle"><span>	Login </span>
-            		</button>
-            		<button onclick="moveTo('register')" class="button" style="vertical-align:middle"><span>Register </span>
-            		</button>
+			<section id="welcomeScreen" class="screen">
+                <div id="startOptionBott" class="startClass" align="center">
+                    <li id="registerbutt" class="button"><a href="#lest" style="vertical-align:middle"> Register</a></li>
+                    <li id="loginbutt" class="button"><a href="#lest" style="vertical-align:middle"> login</a></li>
+                </div>
+			</section>
+
+    		<section id="loginSection" class="loginClass">
+        		<div class="container">
+                    <div class="form-group">
+                        <div class="page-header">
+                            <p class="lead text-center">
+                                <i class="glyphicon glyphicon-log-in"></i> Welcome To Account Login Panel
+                            </p>
+                        </div>
+                        <form id="loginForm" class="form-horizontal col-xs-4 col-xs-offset-4" role="form" method="post"
+                              action="">
+                            <label for="loginUserName">User Name</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                                </div>
+                                <input class="form-control" id="loginUserName" placeholder="User Name" type="text"
+                                       name="loginUserName">
+                            </div>
+                            <label for="loginPassword">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="loginPassword" placeholder="Password" type="password"
+                                       name="loginPassword">
+                            </div>
+                            <div class="form-row">
+                                <input id="login-submit-button" class="form-control btn btn-primary" type="submit"
+                                       value="Submit">
+                            </div>
+                        </form>
+                    </div>
         		</div>
     		</section>
 
-    		<section id="loginSection">
-        <div class="container">
-            <div class="form-group">
-                <div class="page-header">
-                    <p class="lead text-center">
-                        <i class="glyphicon glyphicon-log-in"></i> Welcome To Account Login Panel
-                    </p>
+			<section id="registerSection" class="registerClass">
+                <div class="container">
+                    <div class="form-group">
+
+                        <br><br>
+                        <div class="page-header">
+                            <p class="lead text-center">
+                                <i class="glyphicon glyphicon-log-in"></i> Welcome To Account register Panel
+                            </p>
+                        </div>
+
+                        <form id="lregisterForm" class="form-horizontal col-xs-4 col-xs-offset-4" role="form" method="post"
+                              action="">
+                            <label for="loginUserName">User Name</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                                </div>
+                                <input class="form-control" id="registerUserName" placeholder="User Name" type="text"
+                                       name="loginUserName">
+                            </div>
+                            <label for="loginPassword">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="registerPassword" placeholder="Password" type="password"
+                                       name="loginPassword">
+                            </div>
+
+                            <label for="loginPassword">First Name</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="registerFirstName" placeholder="FirstName" type="text"
+                                       name="loginPassword">
+                            </div>
+
+                            <label for="loginPassword">Last Name</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="registerLastName" placeholder="LastName" type="text"
+                                       name="loginPassword">
+                            </div>
+
+                            <label for="loginPassword">Email</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="registerEmail" placeholder="Email" type="text"
+                                       name="loginPassword">
+                            </div>
+
+                            <label for="loginPassword">Birth Day</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </div>
+                                <input class="form-control" id="registerBirthDat" placeholder="Birth Day" type="text"
+                                       name="loginPassword">
+                            </div>
+
+                            <div class="form-row">
+                                <input id="register-submit-button" class="form-control btn btn-primary" type="submit"
+                                       value="Submit">
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <form id="loginForm" class="form-horizontal col-xs-4 col-xs-offset-4" role="form" method="post"
-                      action="">
-                    <label for="loginUserName">User Name</label>
-                    <div class="input-group">
-                        <div class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
-                        </div>
-                        <input class="form-control" id="loginUserName" placeholder="User Name" type="text"
-                               name="loginUserName">
-                    </div>
-                    <label for="loginPassword">Password</label>
-                    <div class="input-group">
-                        <div class="input-group-addon">
-                            <i class="glyphicon glyphicon-lock"></i>
-                        </div>
-                        <input class="form-control" id="loginPassword" placeholder="Password" type="password"
-                               name="loginPassword">
-                    </div>
-                    <div class="form-row">
-                        <input id="login-submit-button" class="form-control btn btn-primary" type="submit"
-                               value="Submit">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
+			</section>
+
+			<section id="preGameSection" class="preGameClass">
+
+			</section>
+
+			<section id="gameSection" class="gameClass">
+
+			</section>
 		</div>
 
+        <script type="text/javascript">
+            $("#registerbutt").click(function () {
+                $(".startClass").hide();
+                $(".loginClass").hide();
+                $(".preGameClass").hide();
+                $(".gameClass").hide();
+                $("#registerClass").show();
+            })
 
+            $("#loginbutt").click(function () {
+                $(".startClass").hide();
+                $(".registerClass").hide();
+                $(".preGameClass").hide();
+                $(".gameClass").hide();
+                $("#registerClass").show();
+            })
 
+        </script>
 
-
-
-		<!--<div id="score">
-			<label for="lblScore">SCORE:</label>
-			<input id="lblScore" type="text" />
-		</div>
-		<div id="time">
-			<label for="lblTime">TIME:</label>
-			<input id="lblTime" type="text" />
-		</div>
-		<div id="game">
-			<canvas id="canvas" height="600" width="600"></canvas>
-		</div>-->
-
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
-<script src="https://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script type="text/javascript" src="code/main.js"></script>
-<script type="text/javascript" src="code/register.js"></script>
-<script type="text/javascript" src="code/login.js"></script>
-<script type="text/javascript" src="code/about.js"></script>
-<script type="text/javascript" src="code/navbar.js"></script>
-<script type="text/javascript" src="code/pre-game.js"></script>
-<script type="text/javascript" src="code/game.js"></script>
 	</body>
 </html>
