--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 
 	<head>
 		<script src="./jquery-3.4.1.slim.min.js"></script>
-		<script type="text/javascript" src="./app.js"></script>
 		<meta charset="utf-8" />
 		<!-- Our javaScript  file -->
-		<script type="text/javascript" src="app.js"></script>
-		<script type="text/javascript" src="main.js"></script>
-		<script type="text/javascript" src="register.js"></script>
-		<script type="text/javascript" src="code/login.js"></script>
-		<script type="text/javascript" src="about.js"></script>
-		<script type="text/javascript" src="navbar.js"></script>
-		<script type="text/javascript" src="pre-game.js"></script>
-		<script type="text/javascript" src="game.js"></script>
+        <script type="text/javascript" src="code/app.js"></script>
+		<script type="text/javascript" src="code/register.js"></script>
+		<script type="text/javascript" src="code/pre-game.js"></script>
+        <script type="text/javascript" src="code/navbar.js"></script>
+        <script type="text/javascript" src="code/main.js"></script>
+        <script type="text/javascript" src="code/login.js"></script>
+        <script type="text/javascript" src="code/about.js"></script>
+		<script type="text/javascript" src="code/game.js"></script>
 
 		<!-- Our CSS stylesheet file -->
 		<link rel="stylesheet" href="style.css" />
@@ -79,9 +78,9 @@
                                 <input class="form-control" id="loginPassword" placeholder="Password" type="password"
                                        name="loginPassword">
                             </div>
+
                             <div class="form-row">
-                                <input id="login-submit-button" class="form-control btn btn-primary" type="submit"
-                                       value="Submit">
+                                <li id="login-submit-button" class="submitLoginbutton"><a href="#lest"  type="submit" style="vertical-align:middle"> SUBMIT</a></li>
                             </div>
                         </form>
                     </div>
@@ -163,14 +162,6 @@
                 </div>
 			</section>
 
-			<section id="preGameSection" class="preGameClass">
-
-			</section>
-
-			<section id="gameSection" class="gameClass">
-
-			</section>
-
             <section id="aboutSection" class="aboutClass">
                 <div id="aboutBotInTop" class="aboutBox">
                     <div id="aboutBoxHeader" class="aboutBox">
@@ -182,6 +173,75 @@
                            More information.......
                     </div>
                 </div>
+            </section>
+
+            <section id="preGameSection" class="preGameClass">
+                <div id="preGameArea" class="preGameAreaClass">
+                    <div id="preGameArea1" class="preGameAreaClass2">
+                        <div class="pageHeader">
+                            <p id="preGameTitle"> Welcome To Pre Game Panel</p>
+                        </div>
+                        <form id="preGameForm" class="preGameFormClass">
+                            <label for="numberOfBalls">Number of balls</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-menu-right"></i>
+                                </div>
+                                <input class="form-control" id="numberOfBalls" placeholder="Number of balls" type="number"
+                                       name="numberOfBalls">
+                            </div>
+
+                            <label for="gameDuration">Game duration</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-menu-right"></i>
+                                </div>
+                                <input class="form-control" id="gameDuration" placeholder="Game duration" type="number"
+                                       name="gameDuration">
+                            </div>
+
+                            <label for="numberOfMonsters">Number of monsters</label>
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <i class="glyphicon glyphicon-menu-right"></i>
+                                </div>
+                                <input class="form-control" id="numberOfMonsters" placeholder="Number of monsters"
+                                       type="number"
+                                       name="numberOfMonsters">
+                            </div>
+
+                            <div class="form-row">
+                                <input id="start-game-submit-button" class="form-control btn btn-primary" type="submit"
+                                       value="Submit">
+                            </div>
+
+                            <div class="form-row">
+                                <li onclick="newGame();return true;" id="enterGame-submit-button" class="submitEnterGamebutton"><a href="#lest"  type="submit" style="vertical-align:middle"> SUBMIT</a></li>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+
+            <section id="gameSection" class="gameClass">
+                <div id="gameInfo" class="gameHeaderClass">
+                    <h4>User:</h4>
+                    <h5 id="userName"></h5>
+                    <h5>SCORE:</h5>
+                    <input id="lblScore" type="text"/>
+                    <h4>TIME:</h4>
+                    <input id="lblTime" type="text"/>
+                    <h4>Lives</h4>
+                    <h5 id="lives"></h5>
+
+                    <button onclick="newGame();return true;" id="newGameButton" class="Gamebutton">New Game</button>
+                    <button onclick="restartGame();return true;" id="restartButton" class="Gamebutton">Restart Game</button>
+                </div>
+
+                <div id="CanvasGameArea" class="canvasClass">
+                    <canvas id="canvasBord" height="600" width="600"></canvas>
+                </div>
+
             </section>
 		</div>
 
@@ -248,6 +308,24 @@
                 $(".registerClass").hide();
                 $(".loginClass").hide();
                 $(".aboutClass").hide();
+            })
+            /////////////////////////////////////////////////////////////////////////////move to game
+            $("#login-submit-button").click(function () {
+                $(".startClass").hide();
+                $(".preGameClass").show();
+                $(".registerClass").hide();
+                $(".loginClass").hide();
+                $(".aboutClass").hide();
+                $(".gameClass").hide();
+            })
+
+            $("#enterGame-submit-button").click(function () {
+                $(".startClass").hide();
+                $(".preGameClass").hide();
+                $(".registerClass").hide();
+                $(".loginClass").hide();
+                $(".aboutClass").hide();
+                $(".gameClass").show();
             })
         </script>
 
