lior up - 5.5 2:13 - done moster part, need dibagin !!

--- a/index.html
+++ b/index.html
@@ -245,10 +245,15 @@
                     <h5 id="userName"></h5>
                     <h5>SCORE:</h5>
                     <input id="lblScore" type="text"/>
-                    <h4>TIME:</h4>
-                    <input id="lblTime" type="text"/>
+
+                    <h4>TIME Paste:</h4>
+                    <input id="lblTimePaste" type="text"/>
+                    <h4>TIME LSFT:</h4>
+                    <input id="lblTimeLeft" type="text"/>
+
                     <h4>Lives</h4>
                     <h5 id="lives"></h5>
+                    <input id="lbllives" type="text"/>
                 </div>
                 <div id="canvasBackground" class="canvasBackgroundClass">
                     <div id="CanvasGameArea" class="canvasClass" align="center">
