lior up - 5.5 23:00 - game done, fix merge

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div id="preGameArea" class="preGameAreaClass">
                     <div id="preGameArea1" class="preGameAreaClass2">
                         <form id="preGameForm" class="preGameFormClass">
-                            <label for="numberOfBalls">Number of balls</label>
+                            <label for="numberOfBalls">Number of balls: (50-90)</label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="glyphicon glyphicon-menu-right"></i>
@@ -189,7 +189,7 @@
                                        name="numberOfBalls">
                             </div>
 
-                            <label for="gameDuration">Game duration</label>
+                            <label for="gameDuration">Game duration: (60+)</label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="glyphicon glyphicon-menu-right"></i>
@@ -198,7 +198,7 @@
                                        name="gameDuration">
                             </div>
 
-                            <label for="numberOfMonsters">Number of monsters</label>
+                            <label for="numberOfMonsters">Number of monsters: (1-4)</label>
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="glyphicon glyphicon-menu-right"></i>
