lior up - 6.5 22:20 - with walls and movment buttoms

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                     <h4>TIME Paste:</h4>
                     <input id="lblTimePaste" type="text"/>
-                    <h4>TIME LSFT:</h4>
+                    <h4>TIME LEFT:</h4>
                     <input id="lblTimeLeft" type="text"/>
 
                     <h4>Lives</h4>
@@ -272,6 +272,9 @@
                         to control the pacman please choose you keys control.
                         press the "choose" button and press on 4 keys on your keybord
                     </div>
+                    <br>
+                    <p> choose key between a-z A-Z or 0-9 </p>
+                    <p> or the arrows buttons </p>
                 </div>
                 <div class="form-row">
                     <li onclick="gameControlChooseR();return true;" id="PacmanControl-choose-buttonR" class="submitEnterGamebutton">
